@@ -80,66 +80,63 @@ set_default_action();
 
 switch (get_request_var('action')) {
 case 'changepassword':
-	// Secpass checking
-	$error = secpass_check_pass(get_nfilter_request_var('password'));
+	// Get current user
+	$user_id = intval($_SESSION['sess_user_id']);
 
+	// Get passwords entered for change
+	$password = get_nfilter_request_var('password');
+	$confirm = get_nfilter_request_var('confirm');
+
+	// Get current password as entered
+	$current_password = get_nfilter_request_var('current_password');
+
+	// Secpass checking
+	$error = secpass_check_pass($password);
+
+	// Check new password passes basic checks
 	if ($error != 'ok') {
 		$bad_password = true;
 		$errorMessage = "<span class='badpassword_message'>$error</span>";
+		break;
 	}
 
-	if (!secpass_check_history($_SESSION['sess_user_id'], get_nfilter_request_var('password'))) {
+	// Check user password history
+	if (!secpass_check_history($user_id, $password)) {
 		$bad_password = true;
 		$errorMessage = "<span class='badpassword_message'>" . __('You cannot use a previously entered password!') . "</span>";
+		break;
 	}
-
-	// Get password options for the new password
-	if (function_exists('password_hash')) {
-		$password_new = password_hash(get_nfilter_request_var('password'), PASSWORD_DEFAULT);
-	} else {
-		$password_new = '';
-	}
-	$password_old = md5(get_nfilter_request_var('password'));
-
-	$current_password_old = md5(get_nfilter_request_var('current_password'));
 
 	// Password and Confirmed password checks
-	if (function_exists('password_verify')) {
-		if ((!password_verify(get_nfilter_request_var('current_password'), $user['password'])) && $user['password'] != $current_password_old) {
-			$bad_password = true;
-			$errorMessage = "<span class='badpassword_message'>" . __('Your current password is not correct. Please try again.') . "</span>";
-		}
-
-		if (password_verify(get_nfilter_request_var('password'), $user['password']) || $user['password'] == $password_old) {
-			$bad_password = true;
-			$errorMessage = "<span class='badpassword_message'>" . __('Your new password cannot be the same as the old password. Please try again.') . "</span>";
-		}
-	} else {
-		if ($user['password'] != $current_password_old) {
-			$bad_password = true;
-			$errorMessage = "<span class='badpassword_message'>" . __('Your current password is not correct. Please try again.') . "</span>";
-		}
-
-		if ($user['password'] == $password_old) {
-			$bad_password = true;
-			$errorMessage = "<span class='badpassword_message'>" . __('Your new password cannot be the same as the old password. Please try again.') . "</span>";
-		}
-	}
-
-	if (get_nfilter_request_var('password') !== (get_nfilter_request_var('confirm'))) {
-	    $bad_password = true;
+	if ($password !== $confirm) {
+		$bad_password = true;
 		$errorMessage = "<span class='badpassword_message'>" . __('Your new passwords do not match, please retype.') . "</span>";
+		break;
 	}
 
-	if ($bad_password == false && get_nfilter_request_var('password') == get_nfilter_request_var('confirm') && get_nfilter_request_var('password') != '') {
-		// Password change is good to go
+	// Compare current password with stored password
+	if (!compat_password_verify($current_password, $user['password'])) {
+		$bad_password = true;
+		$errorMessage = "<span class='badpassword_message'>" . __('Your current password is not correct. Please try again.') . "</span>";
+		break;
+	}
+
+	// Check new password does not match stored password
+	if (compat_password_verify($password, $user['password'])) {
+		$bad_password = true;
+		$errorMessage = "<span class='badpassword_message'>" . __('Your new password cannot be the same as the old password. Please try again.') . "</span>";
+		break;
+	}
+
+	// If password isn't blank, password change is good to go
+	if ($password != '') {
 		if (read_config_option('secpass_expirepass') > 0) {
 			db_execute_prepared("UPDATE user_auth
 				SET lastchange = ?
 				WHERE id = ?
 				AND realm = 0
 				AND enabled = 'on'",
-				array(time(), intval($_SESSION['sess_user_id'])));
+				array(time(), $user_id));
 		}
 
 		$history = intval(read_config_option('secpass_history'));
@@ -149,7 +146,7 @@ case 'changepassword':
 					WHERE id = ?
 					AND realm = 0
 					AND enabled = 'on'",
-					array($_SESSION['sess_user_id']));
+					array($user_id));
 
 				$op = $h['password'];
 				$h = explode('|', $h['password_history']);
@@ -161,7 +158,7 @@ case 'changepassword':
 
 				db_execute_prepared("UPDATE user_auth
 					SET password_history = ? WHERE id = ? AND realm = 0 AND enabled = 'on'",
-					array($h, $_SESSION['sess_user_id']));
+					array($h, $user_id));
 		}
 
 		db_execute_prepared('INSERT IGNORE INTO user_log
@@ -172,7 +169,7 @@ case 'changepassword':
 		db_execute_prepared("UPDATE user_auth
 			SET must_change_password = '', password = ?
 			WHERE id = ?",
-			array($password_new != '' ? $password_new:$password_old, $_SESSION['sess_user_id']));
+			array(compat_password_hash($password,PASSWORD_DEFAULT), $user_id));
 
 		kill_session_var('sess_change_password');
 
@@ -183,7 +180,7 @@ case 'changepassword':
 		$has_console = db_fetch_cell_prepared('SELECT realm_id
 			FROM user_auth_realm
 			WHERE user_id = ? AND realm_id = ?',
-			array($_SESSION['sess_user_id'], $realm_id));
+			array($user_id, $realm_id));
 
 		if (basename(get_nfilter_request_var('ref')) == 'auth_changepassword.php' || basename(get_nfilter_request_var('ref')) == '') {
 			if ($has_console) {
